--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,9 @@ jobs:
           { "is_singleton": true }
           EOF
 
+          echo "==== PKG TREE ===="
+          find pkg -maxdepth 5 -type f | sort
+
           cd pkg && zip -r ../deploy.zip . && cd ..
 
       - name: Deploy ZIP as WebJob
@@ -66,3 +69,9 @@ jobs:
           slot-name: ${{ inputs.slot }}
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: ./deploy.zip
+
+      - name: Upload deploy.zip (debug)
+        uses: actions/upload-artifact@v4
+        with:
+          name: deploy-zip
+          path: ./deploy.zip
